# CS-530-Project

./: .gitignore  README.md  config.yaml  pyproject.toml
app/: __init__.py  app_manager.py  config.py  constants.py  main.py
app/config/: romaji_map.json  static_config.yaml
app/database/: __init__.py  database_manager.py  study_card_database.py  word_database.py
app/ui/: __init__.py  card_front.py  card_review.py  database.py  main_menu.py  page.py  study_menu.py  word.py
app/ui/elements/: __init__.py  button.py  canvas.py  input.py  screen_flip.py  search.py  slider.py
database/: README.md  kanji.db
database/data/: top_3000_words.csv
database/scripts/: build_kanji_db.py  build_study_card_db.py  convert_pronunciation.py  filter_kanjivg.py  format_data.py  parse_xml.py
