[tool.poetry]
name = "kanji-trainer"
version = "0.1.0"
description = ""
authors = ["Adam Larson <alarson7767@sdsu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.1"
pyyaml = "^6.0.2"
db-sqlite3 = "^0.0.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
